# IADSP

./: CMakeLists.txt  LICENSE  README.md
Filters/: CrossoverFilter.cpp  CrossoverFilter.hpp  SecondOrderFilter.hpp
Filters/EQ/: OnePoleEQFilter.cpp  OnePoleEQFilter.hpp  TwoPoleMidEQFilter.hpp
IA_Filters/: ButterworthHalfbandFilter.cpp  ButterworthHalfbandFilter.hpp  FirstOrderFilter.cpp  FirstOrderFilter.hpp  HalfbandFIRFilter.cpp  HalfbandFIRFilter.hpp  SecondOrderFilter.cpp
IA_Filters/EQ/: OnePoleEQFilter.cpp  OnePoleEQFilter.hpp  TwoPoleMidEQFilter.cpp  TwoPoleMidEQFilter.hpp
IA_SynthBasics/: ADREnvelope.cpp  ADREnvelope.hpp  ADSREnvelope.cpp  ADSREnvelope.hpp  LFO.cpp  LFO.hpp  MorphingOscillator.cpp  MorphingOscillator.hpp  OscillatorBasics.hpp  PulseOscillator.cpp  PulseOscillator.hpp
IA_Utilities/: GlideSmoother.hpp  LinearSmoother.hpp  LoudnessMeter.cpp  LoudnessMeter.hpp  Oversampler.cpp  Oversampler.hpp  ParameterListener.hpp  ResamplingFilter.hpp
IA_Waveshaping/: ADAAClippers.hpp  BasicClippers.hpp
Utilities/: FiFo.hpp  ResamplingFilter.hpp
